frdrcp+frdrpcserver: implement ForwardingAbility
